--- a/templates/client_note.html
+++ b/templates/client_note.html
@@ -14,27 +14,32 @@
         <title>INNER INTEL - Beta</title>
 
         <!-- Styles -->
+
         <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-        <link href='{% static "/assets/plugins/bootstrap/css/bootstrap.min.css" %}' rel="stylesheet">
+        <link href='{% static "assets/plugins/bootstrap/css/bootstrap.min.css"%}' rel="stylesheet">
         <link href='{% static "assets/plugins/font-awesome/css/font-awesome.min.css"%}' rel="stylesheet">
-        <link href='{% static "assets/plugins/icomoon/style.css" %}' rel="stylesheet">
+        <link href='{% static "assets/plugins/icomoon/style.css"%}' rel="stylesheet">
         <link href='{% static "assets/plugins/uniform/css/default.css"%}' rel="stylesheet"/>
-        <link href='{% static "assets/plugins/switchery/switchery.min.css"%}' rel="stylesheet">
-        <link href='{% static "assets/plugins/nvd3/nv.d3.min.css"%}' rel="stylesheet">
+        <link href='{% static "assets/plugins/switchery/switchery.min.css"%}' rel="stylesheet"/>
+        <link href='{% static "assets/plugins/datatables/css/jquery.datatables.min.css"%}' rel="stylesheet" type="text/css"/>
+        <link href='{% static "assets/plugins/datatables/css/jquery.datatables_themeroller.css"%}' rel="stylesheet" type="text/css"/>
+        <link href='{% static "assets/plugins/bootstrap-datepicker/css/datepicker3.css"%}' rel="stylesheet" type="text/css"/>
+        <link href='{% static "assets/css/detail.css" %}' rel="stylesheet" type="text/css"/>
 
         <!-- Theme Styles -->
         <link href='{% static "assets/css/ecaps.min.css"%}' rel="stylesheet">
-        <link href='{% static "assets/css/custom.css" %}' rel="stylesheet">
+        <link href='{% static "assets/css/custom.css"%}' rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
-        
-        
+
+
         <![endif]-->
     </head>
+<!--     class="page-sidebar-collapsed page-sidebar-fixed"-->
     <body>
-        
+
         <!-- Page Container -->
         <div class="page-container">
             <!-- Page Sidebar -->
@@ -45,25 +50,29 @@
                     <i class="icon-close" id="sidebar-toggle-button-close"></i>
                 </a>
                 <br><br>
+                <div class="panel-body user-profile-panel">
+                    <img src='{% static "assets/images/profile.png"%}' class="user-profile-image img-circle"  alt="">
+                    <h4 class="text-center m-t-lg">Mercy Chen</h4>
+                    <hr>
+                </div>
                 <div class="page-sidebar-inner">
                     <div class="page-sidebar-menu">
                         <ul class="accordion-menu">
                             <li>
                                 <a href="index.html">
-                                    <i class="menu-icon icon-format_list_bulleted"></i><span>Home Page</span>
+                                    <i class="menu-icon icon-home4"></i><span>Home Page</span>
                                 </a>
                             </li>
-                            <li class="active-page">
+                            <li>
                                 <a href="setting.html">
                                     <i class="menu-icon icon-star"></i><span>Setting</span>
                                 </a>
                             </li>
-                            
                         </ul>
                     </div>
                 </div>
             </div><!-- /Page Sidebar -->
-            
+
             <!-- Page Content -->
             <div class="page-content">
                 <!-- Page Header -->
@@ -90,9 +99,9 @@
                                     <i class="fa fa-angle-down"></i>
                                 </button>
                             </div>
-                        
+
                             <!-- Collect the nav links, forms, and other content for toggling -->
-                        
+
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                 <ul class="nav navbar-nav">
                                     <li><a href="javascript:void(0)" id="collapsed-sidebar-toggle-button"><i class="fa fa-bars"></i></a></li>
@@ -118,91 +127,88 @@
                 <!-- Page Inner -->
                 <div class="page-inner">
                     <div class="page-title">
-                        <h3 class="breadcrumb-header">Setting</h3>
+                        <h3 class="breadcrumb-header">Notes</h3>
                     </div>
                     <div id="main-wrapper">
-                        <!-- Colum One -->
-                        <div class="col-lg-12">
-                            <div class="panel panel-white">
-                                <div class="panel-heading clearfix">
-                                    <h4 class="panel-title">Mercy Chen</h4>
-                                </div>
-                                <div class="panel-body">
-                                    <form class="form-horizontal">
-                                        <div class="form-group">
-                                            <label for="inputEmail3" class="col-sm-2 control-label">Image Profile</label>
-                                            <div class="col-sm-10">
-                                                <div style="margin-bottom:15px;" class="input-group">
-                                                    <input type="text" class="form-control" placeholder="Choose File">
-                                                    <span class="input-group-btn">
-                                                        <button class="btn btn-success" type="button">Browse</button>
-                                                    </span>
+                        <div class="panel panel-white">
+                            <div class="panel-body">
+                                <button type="button" class="btn btn-success m-b-sm" data-toggle="modal" data-target="#myModal">Add new note</button>
+                                <!-- Modal -->
+                                <form id="add-row-form" action="javascript:void(0);">
+                                    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                                    <h4 class="modal-title" id="myModalLabel">New Note</h4>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <div class="form-group">
+                                                        <input type="text" id="name-input" class="form-control" placeholder="Time" required>
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <input type="text" id="position-input" class="form-control" placeholder="Content" required>
+                                                    </div>
+<!--                                                    <div class="form-group">-->
+<!--                                                        <input type="number" id="age-input" class="form-control" placeholder="Age" required>-->
+<!--                                                    </div>-->
+<!--                                                    <div class="form-group">-->
+<!--                                                        <input type="text" id="date-input" class="form-control date-picker" placeholder="Start Date" required>-->
+<!--                                                    </div>-->
+<!--                                                    <div class="form-group">-->
+<!--                                                        <input type="number" id="salary-input" class="form-control" placeholder="Salary" required>-->
+<!--                                                    </div>-->
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                                    <button type="submit" id="add-row" class="btn btn-success">Add</button>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="form-group">
-                                            <label for="inputEmail3" class="col-sm-2 control-label">First Name</label>
-                                            <div class="col-sm-10">
-                                            <input type="email" class="form-control" id="inputEmail3" placeholder="Mercy">
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="inputPassword3" class="col-sm-2 control-label">Last Name</label>
-                                            <div class="col-sm-10">
-                                            <input type="password" class="form-control" id="inputPassword3" placeholder="Chen">
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="inputEmail3" class="col-sm-2 control-label">Phone</label>
-                                            <div class="col-sm-10">
-                                            <input type="email" class="form-control" id="inputEmail3" placeholder="1234567890">
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-                                            <div class="col-sm-10">
-                                            <input type="email" class="form-control" id="inputEmail3" placeholder="mercychen03@gmail.com">
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-                                            <div class="col-sm-10">
-                                            <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <label class="col-sm-2 control-label">Notification Setting</label>
-                                            <div class="col-sm-10">
-                                                <select style="margin-bottom:15px;" class="form-control">
-                                                    <option>need to discuss</option>
-                                                    <option>2</option>
-                                                    <option>3</option>
-                                                    <option>4</option>
-                                                    <option>5</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                    
-                                        <div class="form-group">
-                                            <div class="col-sm-offset-2 col-sm-10">
-                                            <button type="submit" class="btn btn-success" style="margin-top:10px;margin-bottom:-14px;">SAVE</button>
-                                            </div>
-                                        </div>
-                                    </form>
+                                    </div>
+                                </form>
+                                <div class="table-responsive">
+                                    <table id="example3" class="display table" style="width: 100%; cellspacing: 0;">
+                                        <thead>
+                                            <tr>
+                                                <th>Time</th>
+                                                <th>Content</th>
+
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>15/09/22</td>
+                                                <td>Check for intolerance</td>
+                                            </tr>
+                                            <tr>
+                                                <td>15/09/22</td>
+                                                <td>Ric hasn't been keeping his logs</td>
+                                            </tr>
+                                            <tr>
+                                                <td>15/09/22</td>
+                                                <td>Pain in stomach</td>
+                                            </tr>
+                                            <tr>
+                                                <td>15/09/22</td>
+                                                <td>Check for intolerance</td>
+                                            </tr>
+                                            <tr>
+                                                <td>15/09/22</td>
+                                                <td>Ric hasn't been keeping his logs</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
                                 </div>
                             </div>
-                        <div>
+                        </div>
                     </div><!-- Main Wrapper -->
                 </div><!-- /Page Inner -->
-                
-            
             </div><!-- /Page Content -->
         </div><!-- /Page Container -->
-            </div>
-        </div>
-        
+
+
         <!-- Javascripts -->
-        <script src='{% static "assets/js/pages/dashboard.js"%}'></script>
         <script src='{% static "assets/plugins/jquery/jquery-3.1.0.min.js"%}'></script>
         <script src='{% static "assets/plugins/bootstrap/js/bootstrap.min.js"%}'></script>
         <script src='{% static "assets/plugins/jquery-slimscroll/jquery.slimscroll.min.js"%}'></script>
@@ -210,7 +216,7 @@
         <script src='{% static "assets/plugins/switchery/switchery.min.js"%}'></script>
         <script src='{% static "assets/plugins/chartjs/chart.min.js"%}'></script>
         <script src='{% static "assets/plugins/d3/d3.min.js"%}'></script>
-         <script src='{% static "assets/plugins/nvd3/nv.d3.min.js"%}'></script>
+        <script src='{% static "assets/plugins/nvd3/nv.d3.min.js"%}'></script>
         <script src='{% static "assets/plugins/flot/jquery.flot.min.js"%}'></script>
         <script src='{% static "assets/plugins/flot/jquery.flot.time.min.js"%}'></script>
         <script src='{% static "assets/plugins/flot/jquery.flot.symbol.min.js"%}'></script>
@@ -218,7 +224,10 @@
         <script src='{% static "assets/plugins/flot/jquery.flot.tooltip.min.js"%}'></script>
         <script src='{% static "assets/plugins/flot/jquery.flot.pie.min.js"%}'></script>
         <script src='{% static "assets/js/ecaps.min.js"%}'></script>
-        <script src="{% static "assets/js/pages/chart.js"%}"></script>
+
+        <script src='{% static "assets/plugins/datatables/js/jquery.datatables.min.js"%}'></script>
+        <script src='{% static "assets/js/pages/table-data.js"%}'></script>
+
 
     </body>
 </html>
