delete dashboard.html and patient.html  and fix the inner jumping

--- a/templates/client.html
+++ b/templates/client.html
@@ -50,7 +50,7 @@
         <div class="page-container">
             <!-- Page Sidebar -->
             <div class="page-sidebar">
-                <a class="logo-box" href="index.html">
+                <a class="logo-box" href="{% url 'index' %}">
                     <span>Inner Intel</span>
                     <i class="icon-radio_button_unchecked" id="fixed-sidebar-toggle-button"></i>
                     <i class="icon-close" id="sidebar-toggle-button-close"></i>
@@ -65,12 +65,12 @@
                     <div class="page-sidebar-menu">
                         <ul class="accordion-menu">
                             <li>
-                                <a href="index.html">
+                                <a href="{% url 'index' %}">
                                     <i class="menu-icon icon-home4"></i><span>Home Page</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="setting.html">
+                                <a href="{% url 'setting' %}">
                                     <i class="menu-icon icon-star"></i><span>Setting</span>
                                 </a>
                             </li>
@@ -99,7 +99,7 @@
                             <div class="navbar-header">
                                 <div class="logo-sm">
                                     <a href="javascript:void(0)" id="sidebar-toggle-button"><i class="fa fa-bars"></i></a>
-                                    <a class="logo-box" href="index.html"><span>Inner Intel</span></a>
+                                    <a class="logo-box" href="{% url 'setting' %}"><span>Inner Intel</span></a>
                                 </div>
                                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                                     <i class="fa fa-angle-down"></i>
@@ -118,11 +118,11 @@
                                     <li class="dropdown user-dropdown">
                                         <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user-circle"></i></a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="dashboard.html">Profile</a></li>
-                                            <li><a href="message.html"><span class="badge pull-right badge-danger">42</span>Messages</a></li>
+
+                                            <li><a href="{% url 'message' %}"><span class="badge pull-right badge-danger">42</span>Messages</a></li>
                                             <li role="separator" class="divider"></li>
-                                            <li><a href="setting.html">Account Settings</a></li>
-                                            <li><a href="login.html">Log Out</a></li>
+                                            <li><a href="{% url 'setting' %}">Account Settings</a></li>
+                                            <li><a href="{% url 'login' %}">Log Out</a></li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -171,11 +171,11 @@
                                         </div>
 
                                         <div class="col-lg-2 col-md-2">
-                                            <a href="client_profile.html">
+                                            <a href="{% url 'client_profile' %}">
                                                 <button style="width:100%" type="submit" class="btn btn-default" >Full Profile</button>
                                             </a>
                                             <br><br>
-                                            <a href="client_appointment.html">
+                                            <a href="{% url 'client_appointment' %}">
                                                 <button style="width:100%" type="button" class="btn btn-default">
                                                     Next Appointment
                                                     <hr style="margin:6px">
@@ -351,7 +351,7 @@
                                             <h4 class="panel-title">Reports</h4>
                                         </div>
                                         <div class="pull-right">
-                                            <a href="client_data.html">
+                                            <a href="{% url 'client_data' %}">
                                                 <button type="button" class="btn btn-default">Complete Log / Database</button>
                                             </a>
                                             <button type="button" class="btn btn-success">Request New Report</button>
