--- a/templates/login.html
+++ b/templates/login.html
@@ -55,8 +55,8 @@
                                         <label for="exampleInputPassword1">Password</label>
                                         <input type="password" class="form-control" id="exampleInputPassword1">
                                     </div>
-                                    <a href="index.html" class="btn btn-primary">Login</a>
-                                    <a href="index.html" class="forgot-link">Forgot password?</a>
+                                    <a href="{% url 'index' %}" class="btn btn-primary">Login</a>
+                                    <a href="{% url 'index' %}" class="forgot-link">Forgot password?</a>
                                 </form>
                             </div>
                             <div>
