fix the display of statical chart

--- a/templates/client.html
+++ b/templates/client.html
@@ -443,7 +443,7 @@
         <script src='{% static "assets/plugins/switchery/switchery.min.js"%}'></script>
         <script src='{% static "assets/plugins/chartjs/chart.min.js"%}'></script>
         <script src='{% static "assets/plugins/d3/d3.min.js"%}'></script>
-        <script src='{% static "assets/plugins/d3/d3.min.js"%}'></script>
+        <script src='{% static "assets/plugins/nvd3/nv.d3.min.js"%}'></script>
         <script src='{% static "assets/plugins/flot/jquery.flot.min.js"%}'></script>
         <script src='{% static "assets/plugins/flot/jquery.flot.time.min.js"%}'></script>
         <script src='{% static "assets/plugins/flot/jquery.flot.symbol.min.js"%}'></script>
