set global params username by using cookies

--- a/templates/client.html
+++ b/templates/client.html
@@ -58,7 +58,7 @@
                 <br><br>
                 <div class="panel-body user-profile-panel">
                     <img src='{% static "assets/images/profile.png"%}' class="user-profile-image img-circle" alt="">
-                    <h4 class="text-center m-t-lg">Mercy Chen</h4>
+                    <h4 class="text-center m-t-lg">{{ username}}</h4>
                     <hr>
                 </div>
                 <div class="page-sidebar-inner">
