--- a/templates/login.html
+++ b/templates/login.html
@@ -57,7 +57,7 @@
                                     </div>
                                     <input type="submit" class="btn btn-primary" value="Login">
 
-                                    <a href="{% url 'index' %}" class="forgot-link">Forgot password?</a>
+{#                                    <a href="{% url 'index' %}" class="forgot-link">Forgot password?</a>#}
                                     <span style="color:orange;">{{ error_msg }}</span>
                                 </form>
                             </div>
