--- a/templates/setting.html
+++ b/templates/setting.html
@@ -125,7 +125,7 @@
                         <div class="col-lg-12">
                             <div class="panel panel-white">
                                 <div class="panel-heading clearfix">
-                                    <h4 class="panel-title">Mercy Chen</h4>
+                                    <h4 class="panel-title">{{ username}}</h4>
                                 </div>
                                 <div class="panel-body">
                                     <form class="form-horizontal">
