--- a/templates/client_profile.html
+++ b/templates/client_profile.html
@@ -61,7 +61,7 @@
                             </li>
                             <li>
                                 <a href="{% url 'setting' %}">
-                                    <i class="menu-icon icon-star"></i><span>Setting</span>
+                                    <i class="menu-icon icon-cog"></i><span>Setting</span>
                                 </a>
                             </li>
                         </ul>
