--- a/templates/setting.html
+++ b/templates/setting.html
@@ -55,7 +55,7 @@
                     </li>
                     <li class="active-page">
                         <a href="{% url 'setting' %}">
-                            <i class="menu-icon icon-star"></i><span>Setting</span>
+                            <i class="menu-icon icon-cog"></i><span>Setting</span>
                         </a>
                     </li>
 
@@ -133,7 +133,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-white">
                         <div class="panel-heading clearfix">
-                            <h4 class="panel-title">Mercy Chen</h4>
+                            <h4 class="panel-title">{{ username }} </h4>
                         </div>
                         <div class="panel-body">
                             <form class="form-horizontal" action="{% url 'setting_user' %}" method="post">
