--- a/templates/client_data.html
+++ b/templates/client_data.html
@@ -141,6 +141,7 @@
                                 <div class="panel-body">
                                     <!-- log table -->
                                     <div id="log-table" style="height:auto;width:100%;overflow:auto;"></div>
+                                    <div id="example-table" style="height:auto;width:100%;overflow:auto;"></div>
                                     <script src='{% static "assets/js/innerintel.js"%}'></script>
                                 </div>
                             </div>
