fix page button

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,13 @@
 
 
     <![endif]-->
+    <style type="text/css">
+        .paginate_button{
+            padding-inline: 12px;
+            padding-block: 7px;
+            margin-inline: 4px;
+        }
+    </style>
 </head>
 <body>
 
