--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,10 @@
         .paginate_button:hover{
             cursor: pointer;
         }
+        .dataTables_info,.dataTables_paginate{
+            margin-top:15px;
+            margin-bottom:10px;
+        }
 
     </style>
 </head>
